--- a/server/config/development.config.json
+++ b/server/config/development.config.json
@@ -7,7 +7,7 @@
         "mongodb": [
             {
                 "active": true,
-                "url": "mongodb://127.0.0.1:27017/mengantar-app",
+                "url": "mongodb://127.0.0.1:27017/matrimony",
                 "options": {}
             }
         ]
