added subscribe schema

--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
-    "mongoose": "^8.4.5"
+    "mongoose": "^8.4.5",
+    "mongoose-data-seed": "^2.1.6"
   },
   "devDependencies": {
     "cors": "^2.8.5",
     "nodemon": "^3.1.4"
+  },
+  "mdSeed": {
+    "seedersFolder": "./seeders"
   }
 }
