--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development nodemon index",
-    "swagger-autogen": "node ./docs/swagger.js"
+    "swagger-autogen": "node ./docs/swagger.js",
+    "seeder": "md-seed run"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "md5": "^2.3.0",
+    "mongodb-backup": "^1.6.9",
     "mongoose": "^6.10.0",
     "mongoose-data-seed": "^2.1.6",
     "swagger-autogen": "^2.23.7",
