--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,12 @@
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "md5": "^2.3.0",
     "mongodb-backup": "^1.6.9",
+    "mongodb-snapshot": "^1.4.1",
     "mongoose": "^6.10.0",
     "mongoose-data-seed": "^2.1.6",
     "swagger-autogen": "^2.23.7",
