--- a/admin/package.json
+++ b/admin/package.json
@@ -17,13 +17,16 @@
     "apexcharts": "^3.41.0",
     "axios": "^1.7.4",
     "date-fns": "^2.30.0",
+    "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-form-stepper": "^2.0.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^5.3.0",
     "react-notifications-component": "^4.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.12.1",
