--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongodb-snapshot": "^1.4.1",
     "mongoose": "^6.10.0",
     "mongoose-data-seed": "^2.1.6",
+    "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
