--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "md5": "^2.3.0",
+    "moment": "^2.30.1",
     "mongodb-backup": "^1.6.9",
     "mongodb-snapshot": "^1.4.1",
     "mongoose": "^6.10.0",
