added backup moved payment data

--- a/server/config/development.config.json
+++ b/server/config/development.config.json
@@ -12,5 +12,7 @@
             }
         ]
     },
-    "jwtKey": "ABCDEFGH"
+    "jwtKey": "ABCDEFGH",
+    "merchantKey" : "pZrgMw",
+    "salt" : "MatrimonyEve123$%%%"
 }
